# tokonomics

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude/: launch.json
docs/: build_docs.py
scripts/: install-rtk.ps1  install-rtk.sh
startup/: README.md  start-tokonomics.bat  start-tokonomics.ps1
tokenscope/: __init__.py  __main__.py  economics.py  server.py
tokenscope/web/: index.html  styles.css
tokonomics/: __init__.py  economics.py  pipeline.py  proxy.py  server.py
tokonomics/sample/: mock_economics.json  mock_gain.json  mock_insights.json
tokonomics/web/: app.js  index.html  styles.css
