[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokonomics"
version = "0.1.0"
description = "Local web UI for Claude token economics - spend, savings, and health - built on rtk + ccusage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "itsravinder" }]
keywords = ["claude", "llm", "tokens", "rtk", "ccusage", "dashboard", "cost"]
dependencies = []  # dashboard server is Python stdlib only

[project.optional-dependencies]
# The optional active proxy may use these; both are imported lazily so the
# dashboard still runs without them. Install with: pip install -e .[proxy]
proxy = ["markitdown", "tiktoken"]

[project.urls]
Homepage = "https://github.com/itsravinder/tokonomics"
Issues = "https://github.com/itsravinder/tokonomics/issues"

[project.scripts]
tokonomics = "tokonomics.server:main"

[tool.setuptools]
packages = ["tokonomics"]

[tool.setuptools.package-data]
tokonomics = ["web/*", "sample/*"]
